--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "test:watch": "jest --watch --notify --notifyMode=change --coverage"
   },
   "dependencies": {
-    "probot": "9.6.6"
+    "probot": "9.6.6",
+    "ignore": "^5.1.2",
+    "js-yaml": "^3.13.1",
+    "normalize-for-search": "^2.1.0"
   },
   "devDependencies": {
     "jest": "24.9.0",
