--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "test:watch": "jest --watch --notify --notifyMode=change --coverage"
   },
   "dependencies": {
-    "probot": "9.6.6",
     "ignore": "5.1.2",
     "js-yaml": "3.13.1",
-    "normalize-for-search": "2.1.0"
+    "normalize-for-search": "2.1.0",
+    "probot": "9.6.6",
+    "probot-commands": "^1.1.0"
   },
   "devDependencies": {
     "jest": "24.9.0",
