--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "sabubot",
   "version": "1.0.0",
@@ -28,6 +29,7 @@
     "probot-commands": "1.1.0"
   },
   "devDependencies": {
+    "moment": "^2.24.0",
     "jest": "24.9.0",
     "nock": "11.7.0",
     "nodemon": "1.19.4",
