--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "jest": "24.9.0",
+    "jest-sonar-reporter": "^2.0.0",
     "nock": "11.7.2",
     "nodemon": "2.0.2",
     "smee-client": "1.1.0",
