--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,5 +2,6 @@ sonar.projectKey=Sabuto_sabubot
 sonar.organization=sabuto
 
 sonar.sources=.
+sonar.tests=test
 
 sonar.testExecutionReportPaths=test-report.xml
