--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,4 +5,4 @@ sonar.sources=.
 sonar.tests=test
 
 sonar.testExecutionReportPaths=test-report.xml
-sonar.javascript.lcov.reportPaths=coverage
+sonar.javascript.lcov.reportPaths=coverage/clover.xml
