--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,7 @@ sonar.projectKey=Sabuto_sabubot
 sonar.organization=sabuto
 
 sonar.sources=.
-sonar.inclusions=lib/**/*.js
+sonar.inclusions=lib/**/*.js, *.js
 
 sonar.testExecutionReportPaths=test-report.xml
 sonar.javascript.lcov.reportPaths=coverage/clover.xml
