--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -20,7 +20,13 @@ jobs:
     - name: npm install, build, and test
       run: |
         npm install
-        npm run build --if-present
-        npm test
+      env:
+        CI: true
+    - name: npm build
+      run: npm run build --if-present
+      env:
+        CI: true
+    - name: test
+      run: npm test
       env:
         CI: true
